Bug 311267 - Final newlines from text attachments is lost
Summary: Final newlines from text attachments is lost
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-06 20:09 UTC by Rolf Eike Beer
Modified: 2012-12-12 07:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rolf Eike Beer 2012-12-06 20:09:05 UTC
Attach a patch to a mail and send it to yourself. Save the patch to disk. It does not end in a newline anymore. This is annoying since patch will now complain when applying.

Reproducible: Always
Comment 1 Laurent Montel 2012-12-06 22:11:59 UTC
will look at it tomorrow
Comment 2 Laurent Montel 2012-12-07 06:59:19 UTC
I confirm it.
Comment 3 Laurent Montel 2012-12-07 07:02:27 UTC
It's not attachjob which create problem but after sending.
Will look at
Comment 4 Laurent Montel 2012-12-07 10:03:51 UTC
Ok it's saved function which has an error.
Comment 5 Laurent Montel 2012-12-07 11:39:56 UTC
it's just a problem with text.
size is not the same.
But with pdf it's ok.
I think it's a bug in kmime which extract text.
Comment 6 Laurent Montel 2012-12-12 07:31:31 UTC
Git commit 5bb2ed17335354dd805d14b63609036fe357b0d5 by Montel Laurent.
Committed on 12/12/2012 at 08:31.
Pushed by mlaurent into branch 'master'.

Fix Bug 311267 - Final newlines from text attachments is lost

FIXED-IN: 4.10

M  +3    -3    kmime/kmime_content.cpp

http://commits.kde.org/kdepimlibs/5bb2ed17335354dd805d14b63609036fe357b0d5