Fix Bug 311267 - Final newlines from text attachments is lost

FIXED-IN: 4.10
BUG: 311267